// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > Snapshots tests > should match the snapshot when disabled 1`] = `
<DocumentFragment>
  <button
    class="_button_50c219 _button--size-m_50c219 _button--buttonPalette-primary_50c219 _button--fontWeight-semiBold_50c219 _button--shape-regular_50c219 _button--disabled_50c219"
    disabled=""
    type="button"
  >
    <span
      class="_button__childrenWraper_50c219 _button__childrenWraper-wrap_50c219"
    >
      Disabled Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button > Snapshots tests > should match the snapshot with an icon 1`] = `
<DocumentFragment>
  <button
    class="_button_50c219 _button--size-m_50c219 _button--buttonPalette-primary_50c219 _button--fontWeight-semiBold_50c219 _button--shape-regular_50c219"
    type="button"
  >
    <div
      class="_button__iconContainer_50c219"
    >
      <svg
        role="presentation"
      />
    </div>
    <span
      class="_button__childrenWraper_50c219 _button__childrenWraper-wrap_50c219"
    >
      Button with Icon
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button > Snapshots tests > should match the snapshot with default props 1`] = `
<DocumentFragment>
  <button
    class="_button_50c219 _button--size-m_50c219 _button--buttonPalette-primary_50c219 _button--fontWeight-semiBold_50c219 _button--shape-regular_50c219"
    type="button"
  >
    <span
      class="_button__childrenWraper_50c219 _button__childrenWraper-wrap_50c219"
    >
      Default Button
    </span>
  </button>
</DocumentFragment>
`;
